--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
           // hide other series
           for (var key in series) {
             if (series[key] != activeSeries) {
-              series[key].hide();
+              series[key].show();
             }
           }
         }
