--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
     // Themes begin
     am4core.useTheme(am4themes_animated);
     // Themes end
-    fetch('/ada-2022-project-wetried/assets/data/map_graph_data.json').then((json) => {
+    fetch('/ada-2022-project-wetried/assets/data/map_graph_data.json')
+    .then(response => {})
+    .then((json) => {
         am4core.ready(function() {
         
         var numberFormatter = new am4core.NumberFormatter();
