--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
             // hide other series
             for (var key in series) {
                 if (series[key] != activeSeries) {
-                series[key].show();
+                series[key].hide();
                 }
             }
             }
