--- a/index.html
+++ b/index.html
@@ -894,6 +894,8 @@
             series.tooltip.dy = -4;
             series.tooltip.fontSize = "0.8em";
             series.tooltipText = "Total {name}: {valueY}";
+
+            series.data.setAll(graph_data)
         
             return series;
         }
