--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
             series.tooltip.fontSize = "0.8em";
             series.tooltipText = "Total {name}: {valueY}";
 
-            series.data.setAll(graph_data)
+            series.data.setAll(graph_data.list)
         
             return series;
         }
