--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
             series.tooltip.fontSize = "0.8em";
             series.tooltipText = "Total {name}: {valueY}";
 
-            series.data = graph_data.list
+            series.data = graph_data
         
             return series;
         }
