--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
                 series.minBulletDistance = 10;
                 series.hidden = true;
                 series.hideTooltipWhileZooming = true;
-                series.max = 10;
+                series.dataFields.max = 10;
             
             
                 // series bullet
