--- a/index.html
+++ b/index.html
@@ -851,8 +851,8 @@
             // create series
             var confirmedSeries = addSeries("confirmed", confirmedColor);
             // active series is visible initially
-            confirmedSeries.tooltip.disabled = true;
-            confirmedSeries.hidden = false;
+            //confirmedSeries.tooltip.disabled = true;
+            //confirmedSeries.hidden = false;
             
             var recoveredSeries = addSeries("recovered", recoveredColor);
             var deathsSeries = addSeries("deaths", deathsColor);
