--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
             valueAxis.renderer.labels.template.verticalCenter = "bottom";
             valueAxis.renderer.labels.template.fill = am4core.color("#ffffff");
             valueAxis.renderer.labels.template.padding(2, 2, 2, 2);
-            valueAxis.adapter.add("max", function(max, target) {
+           /* valueAxis.adapter.add("max", function(max, target) {
                 if (max < 5) {
                 max = 5
                 }
@@ -752,7 +752,7 @@
                 }
                 }
                 return min;
-            })
+            })*/
             
             // cursor
             // https://www.amcharts.com/docs/v4/concepts/chart-cursor/
