--- a/index.html
+++ b/index.html
@@ -733,6 +733,11 @@
             valueAxis.renderer.baseGrid.disabled = true;
             valueAxis.tooltip.disabled = true;
             //valueAxis.extraMax = 0;
+            
+            valueAxis.min = 500;
+            valueAxis.max = 1500;
+            valueAxis.strictMinMax = true; 
+
             valueAxis.maxPrecision = 0;
             valueAxis.renderer.inside = true;
             valueAxis.renderer.labels.template.verticalCenter = "bottom";
