--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@
 
                 valueAxis.min = totalMin[name];
                 valueAxis.max = totalMax[name];
-                valueAxis.strictMinMax = true; 
+                //valueAxis.strictMinMax = true; 
 
                 // hide other series
                 for (var key in series) {
