--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
                 series.fill = color;
                 series.maskBullets = false;
                 series.minBulletDistance = 10;
-                series.minDistance = 100
+                //series.minDistance = 100
                 series.hidden = true;
                 series.hideTooltipWhileZooming = true;
             
