--- a/index.html
+++ b/index.html
@@ -808,11 +808,11 @@
                 for (var key in series) {                    
                     if (series[key].visible) {
                         if (valueAxis.min > totalMin[key]) {
-                            valueAxis.min = totalMin[name];
+                            valueAxis.min = totalMin[key];
                         }
                         
                         if (valueAxis.max < totalMax[key]) {
-                            valueAxis.max = totalMax[name];
+                            valueAxis.max = totalMax[key];
                         }
                     }
                 }
