--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
             lineChart.legend.itemContainers.template.events.on("hit", function(ev) {
                 var min = Number.MAX_SAFE_INTEGER;
                 var max = 0;
-                var name = ev.target.dataItem.dataContext.name;
+                var name = getDataName(ev.target.dataItem.dataContext.name);
 
                 if (!series[name].visible) {
                     if (min > totalMin[name]) {
