--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <li class="nav-author " role="presentation"><a href="/ada-2022-project-wetried/author/martin">Martin</a></li>
         <li class="nav-author " role="presentation"><a href="/ada-2022-project-wetried/author/lewis">Lewis</a></li>
     </ul>
-    <a class="subscribe-button icon-feed" href="/ada-2022-project-wetried/feed.xml">Subscribe</a>
+    <a class="subscribe-button icon-feed" href="/ada-2022-project-wetried/a-full-and-comprehensive-style-test.html">Test</a>
 </div>
 <span class="nav-cover"></span>
 
