--- a/index.html
+++ b/index.html
@@ -1335,7 +1335,7 @@
             
             // set initial data and names
             updateCountryName();
-            changeDataType("airpol");
+            changeDataType("globalviews");
             //populateCountries(slideData.list);
             
             setTimeout(updateSeriesTooltip, 3000);
