--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
 
         <!-- The main content area on the homepage -->
         <main id="content" class="content" role="main">
-            
+
+            <h1 id="heading1">World Map</h1>
+            <hr />
+            <br>
             <div id="chartdiv"></div>
 
         </main>
