--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
     <!-- CHART -->
     <style>
         #chartdiv {
-            max-width: 100%;
-            height: 800px;
+
             background-color:#212327;
         }
     </style>
@@ -129,9 +128,9 @@
             <h1 id="heading1">World Map</h1>
             <hr />
             <br>
-            <div id="chartdiv"></div>
-
         </main>
+
+        <div id="chartdiv" style="margin: 1%;"></div>
 
 
         <!-- The tiny footer at the very bottom -->
