--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <!-- CHART -->
     <style>
         #chartdiv {
+            height: 800px;
             background-color:#212327;
         }
     </style>
