--- a/index.html
+++ b/index.html
@@ -128,9 +128,15 @@
             <h1 id="heading1">World Map</h1>
             <hr />
             <br>
-            <div id="chartdiv" style="margin: 1%;"></div>
+            In this map, you can see the air pollution, the total number of Wikipedia views and the number of views for articles in the environment topic per day and studied country. 
+            You can click on a country to see its specific graph. Clicking again on the country return to the world view.
+            <br>
         </main>
 
+        <div id="chartdiv" style="margin: 1%;"></div>
+
+        <main id="content" class="content" role="main">
+        </main>
 
 
         <!-- The tiny footer at the very bottom -->
