--- a/index.html
+++ b/index.html
@@ -123,11 +123,10 @@
         </header>
 
         <!-- The main content area on the homepage -->
-        <main id="content" class="content" role="main">
+        <main id="content" class="content" role="main" style="width: 50%;">
 
             <h1 id="heading1">World Map</h1>
             <hr />
-            <br>
             In this map, you can see the air pollution, the total number of Wikipedia views and the number of views for articles in the environment topic per day and studied country. 
             You can click on a country to see its specific graph. Clicking again on the country return to the world view.
             <br>
