--- a/index.html
+++ b/index.html
@@ -123,13 +123,15 @@
         </header>
 
         <!-- The main content area on the homepage -->
-        <main id="content" class="content" role="main" style="width: 50%;">
+        <main id="content" class="content" role="main">
+            <article class="post tag-test tag-content">
 
-            <h1 id="heading1">World Map</h1>
-            <hr />
-            In this map, you can see the air pollution, the total number of Wikipedia views and the number of views for articles in the environment topic per day and studied country. 
-            You can click on a country to see its specific graph. Clicking again on the country return to the world view.
-            <br>
+                <h1 id="heading1">World Map</h1>
+                <hr />
+                In this map, you can see the air pollution, the total number of Wikipedia views and the number of views for articles in the environment topic per day and studied country. 
+                You can click on a country to see its specific graph. Clicking again on the country return to the world view.
+            
+            </article>
         </main>
 
         <div id="chartdiv" style="margin: 1%;"></div>
