--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 
                 <h1 id="heading1">World Map</h1>
                 <hr />
-                In this map, you can see the air pollution, the total number of Wikipedia views and the number of views for articles in the environment topic per day and studied country. 
-                You can click on a country to see its specific graph. Clicking again on the country return to the world view.
+                <p>In this map, you can see the air pollution, the total number of Wikipedia views and the number of views for articles in the environment topic per day and studied country. 
+                You can click on a country to see its specific graph. Clicking again on the country return to the world view.</p>
             
             </article>
         </main>
