--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <meta property="og:title" content="Has Covid taught humans a valuable climate lesson?" />
     <meta property="og:description" content="subtitle" />
     <meta property="og:url" content="http://localhost:4000/ada-2022-project-wetried//" />
-    <meta property="og:image" content="/ada-2022-project-wetried/assets/images/cover1.jpg" />
+    <meta property="og:image" content="/ada-2022-project-wetried/assets/images/cover1.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Has Covid taught humans a valuable climate lesson?" />
     <meta name="twitter:description" content="subtitle" />
     <meta name="twitter:url" content="http://localhost:4000/ada-2022-project-wetried//" />
-    <meta name="twitter:image:src" content="/ada-2022-project-wetried/assets/images/cover1.jpg" />
+    <meta name="twitter:image:src" content="/ada-2022-project-wetried/assets/images/cover1.png" />
 
     <script type="application/ld+json">
 {
@@ -55,7 +55,7 @@
     "publisher": "Has Covid taught humans a valuable climate lesson?",
     "name": "Has Covid taught humans a valuable climate lesson?",
     "url": "http://localhost:4000/ada-2022-project-wetried//",
-    "image": "/ada-2022-project-wetried/assets/images/cover1.jpg",
+    "image": "/ada-2022-project-wetried/assets/images/cover1.png",
     "description": "subtitle"
 }
     </script>
@@ -109,7 +109,7 @@
     <div class="site-wrapper">
 
         <header class="main-header "
-                style="background-image: url(/ada-2022-project-wetried/assets/images/cover1.jpg) ">
+                style="background-image: url(/ada-2022-project-wetried/assets/images/cover1.png) ">
             <nav class="main-nav overlay clearfix">
                 <a class="blog-logo" href="/ada-2022-project-wetried/"><img src="/ada-2022-project-wetried/assets/images/ghost.png" alt="Blog Logo" /></a>
                 
