--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
                 <div>
                     <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/8.embed?autosize=true&link=false"></iframe>
                 </div>
+
+                <p>Post mobility vs Post normalcy effects on environment views</p>
+                <div>
+                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/10.embed?autosize=true&link=false"></iframe>
+                </div>
             </article>
         </main>
 
