--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
                 <div>
                     <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/10.embed?autosize=true&link=false"></iframe>
                 </div>
+
+                <p>Comparaison with rest of Wikipedia</p>
+                <div>
+                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/12.embed?autosize=true&link=false"></iframe>
+                </div>
             </article>
         </main>
 
