--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@
                 <div>
                     <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/12.embed?autosize=true&link=false"></iframe>
                 </div>
+
+                <p>Yearly average of daily pollution in capital cities</p>
+                <div>
+                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/14.embed?autosize=true&link=false"></iframe>
+                </div>
             </article>
         </main>
 
