--- a/index.html
+++ b/index.html
@@ -166,6 +166,12 @@
                 <div>
                     <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/14.embed?autosize=true&link=false"></iframe>
                 </div>
+
+                <p>2019 to 2020 comparison</p>
+                <div>
+                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/16.embed?autosize=true&link=false"></iframe>
+                </div>
+
             </article>
         </main>
 
