--- a/index.html
+++ b/index.html
@@ -172,6 +172,11 @@
                     <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/16.embed?autosize=true&link=false"></iframe>
                 </div>
 
+                <p>2020 to 2021 comparison</p>
+                <div>
+                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/18.embed?autosize=true&link=false"></iframe>
+                </div>
+
             </article>
         </main>
 
