--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
                 <div>
                     <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/18.embed?autosize=true&link=false"></iframe>
                 </div>
+                
+                <p>2019 to 2021 comparison</p>
+                <div>
+                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/20.embed?autosize=true&link=false"></iframe>
+                </div>
 
             </article>
         </main>
