--- a/index.html
+++ b/index.html
@@ -182,6 +182,11 @@
                     <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/20.embed?autosize=true&link=false"></iframe>
                 </div>
 
+                <p>The peak of awareness marks a significant difference in air quality in a given country ?</p>
+                <div>
+                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/22.embed?autosize=true&link=false"></iframe>
+                </div>
+
             </article>
         </main>
 
