--- a/index.html
+++ b/index.html
@@ -187,6 +187,11 @@
                     <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/22.embed?autosize=true&link=false"></iframe>
                 </div>
 
+                <p>Results of the prediction</p>
+                <div>
+                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/24.embed?autosize=true&link=false"></iframe>
+                </div>
+
             </article>
         </main>
 
