--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     The R formula for these regressions is:
                 </p>
 
-                <iframe width="300" height="100" frameborder="0" scrolling="no" src="https://www.codecogs.com/eqnedit.php?latex=log%5C_views%20%5C%3B%20%5Csim%20%5C%3B%20is%5C_2020%20*%20period%20*%20language#0"></iframe>
+                <div><input type="image" src="/ada-2022-project-wetried/assets/image/CodeCogsEqn.png" alt="Image (input)"></div>
 
                 <p>
                     Three comparisons are made for each language:
