--- a/index.html
+++ b/index.html
@@ -205,7 +205,9 @@
                     The R formula for these regressions is:
                 </p>
 
-                <p><img src="/ada-2022-project-wetried/assets/images/CodeCogsEqn.png" alt="Image (input)"></p>
+                <p><img src="/ada-2022-project-wetried/assets/images/CodeCogsEqn.png" alt="Image (input)" style="display: block;
+                    margin-left: auto;
+                    margin-right: auto;"></p>
 
                 <p>
                     Three comparisons are made for each language:
