--- a/index.html
+++ b/index.html
@@ -285,6 +285,11 @@
                 </p>
 
                 <p>
+                    <img src="/ada-2022-project-wetried/assets/images/dtw_en.png" alt="Image (input)" style="float: left;">
+                    <img src="/ada-2022-project-wetried/assets/images/dtw_ko.png" alt="Image (input)" style="float: right;">
+                </p>
+
+                <p>
                     We can see here that for Italian, Norwegian, English and Dutch, the time series are really close to each others, and because the shortest path is 
                     really close to the matrix diagonal, we can say that the time series are behaving similarly (up to the scales of the values and time dilation). 
                     This may indicate that the evolution in environment views and Wikipedia views may behave very similarly.
