--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
                 </p>
 
                 <p>
-                    <img src="/ada-2022-project-wetried/assets/images/dtw_en.png" alt="Image (input)" style="float: left;">
-                    <img src="/ada-2022-project-wetried/assets/images/dtw_ko.png" alt="Image (input)" style="float: right;">
+                    <img src="/ada-2022-project-wetried/assets/images/dtw_en.png" alt="Image (input)" style="float: left; width: 10%; height: 10%;">
+                    <img src="/ada-2022-project-wetried/assets/images/dtw_ko.png" alt="Image (input)" style="float: right; width: 10%; height: 10%;">
                 </p>
 
                 <p>
