--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
                     between the environment-related views and all views for that language. Examples of results are below
                 </p>
 
-                <p>
+                <div>
                     <img src="/ada-2022-project-wetried/assets/images/dtw_en.png" alt="Image (input)" style="float: left; width: 40%; height: 40%;">
                     <img src="/ada-2022-project-wetried/assets/images/dtw_ko.png" alt="Image (input)" style="float: right; width: 40%; height: 40%;">
-                </p>
+                </div>
 
                 <p>
                     We can see here that for Italian, Norwegian, English and Dutch, the time series are really close to each others, and because the shortest path is 
