--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
                     between the environment-related views and all views for that language. Examples of results are below
                 </p>
 
-                <div>
-                    <img src="/ada-2022-project-wetried/assets/images/dtw_en.png" alt="Image (input)" style="float: left; width: 40%; height: 40%;">
-                    <img src="/ada-2022-project-wetried/assets/images/dtw_ko.png" alt="Image (input)" style="float: right; width: 40%; height: 40%;">
+                <div style="display: flex;">
+                    <img src="/ada-2022-project-wetried/assets/images/dtw_en.png" alt="Image (input)" style="display: block; width: 40%; height: 40%;">
+                    <img src="/ada-2022-project-wetried/assets/images/dtw_ko.png" alt="Image (input)" style="display: block; width: 40%; height: 40%;">
                 </div>
 
                 <p>
