--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     between the environment-related views and all views for that language. Examples of results are below
                 </p>
 
-                <div style="display: flex;">
+                <div style="display: flex; margin-left: auto; margin-right: auto;">
                     <img src="/ada-2022-project-wetried/assets/images/dtw_en.png" alt="Image (input)" style="display: block; width: 40%; height: 40%;">
                     <img src="/ada-2022-project-wetried/assets/images/dtw_ko.png" alt="Image (input)" style="display: block; width: 40%; height: 40%;">
                 </div>
