--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 
     <!-- Page Meta -->
     <title>Has Covid taught humans a valuable climate lesson?</title>
-    <meta name="description" content="subtitle" />
-
     <!-- Mobile Meta -->
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -31,7 +29,7 @@
     <style>.hljs { background: none; }</style>
 
     <!-- Ghost outputs important style and meta data with this tag -->
-    <link rel="canonical" href="http://localhost:4000/ada-2022-project-wetried//" />
+    <link rel="canonical" href="https://epfl-ada.github.io/ada-2022-project-wetried/" />
     <meta name="referrer" content="origin" />
     <link rel="next" href="/ada-2022-project-wetried/page2/" />
 
@@ -39,14 +37,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Has Covid taught humans a valuable climate lesson?" />
     <meta property="og:description" content="subtitle" />
-    <meta property="og:url" content="http://localhost:4000/ada-2022-project-wetried//" />
+    <meta property="og:url" content="https://epfl-ada.github.io/ada-2022-project-wetried/" />
     <meta property="og:image" content="/ada-2022-project-wetried/assets/images/cover1.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Has Covid taught humans a valuable climate lesson?" />
-    <meta name="twitter:description" content="subtitle" />
-    <meta name="twitter:url" content="http://localhost:4000/ada-2022-project-wetried//" />
-    <meta name="twitter:image:src" content="/ada-2022-project-wetried/assets/images/cover1.png" />
 
     <script type="application/ld+json">
 {
@@ -56,7 +48,6 @@
     "name": "Has Covid taught humans a valuable climate lesson?",
     "url": "http://localhost:4000/ada-2022-project-wetried//",
     "image": "/ada-2022-project-wetried/assets/images/cover1.png",
-    "description": "subtitle"
 }
     </script>
 
@@ -91,15 +82,7 @@
     </a>
     <ul>
         <li class="nav-home  nav-current" role="presentation"><a href="/ada-2022-project-wetried/">Home</a></li>
-        <li class="nav-about " role="presentation"><a href="/ada-2022-project-wetried/about">About</a></li>
-        <li class="nav-fables " role="presentation"><a href="/ada-2022-project-wetried/tag/fables">Fables</a></li>
-        <li class="nav-speeches " role="presentation"><a href="/ada-2022-project-wetried/tag/speeches">Speeches</a></li>
-        <li class="nav-fiction " role="presentation"><a href="/ada-2022-project-wetried/tag/fiction">Fiction</a></li>
-        <li class="nav-author " role="presentation"><a href="/ada-2022-project-wetried/author/casper">Casper</a></li>
-        <li class="nav-author " role="presentation"><a href="/ada-2022-project-wetried/author/edgar">Edgar</a></li>
-        <li class="nav-author " role="presentation"><a href="/ada-2022-project-wetried/author/abraham">Abraham</a></li>
-        <li class="nav-author " role="presentation"><a href="/ada-2022-project-wetried/author/martin">Martin</a></li>
-        <li class="nav-author " role="presentation"><a href="/ada-2022-project-wetried/author/lewis">Lewis</a></li>
+        <li class="nav-about " role="presentation"><a href="/ada-2022-project-wetried/appendix">Appendix</a></li>
     </ul>
     <a class="subscribe-button icon-feed" href="/ada-2022-project-wetried/a-full-and-comprehensive-style-test.html">Test</a>
 </div>
@@ -119,7 +102,6 @@
             <div class="vertical">
                 <div class="main-header-content inner">
                     <h1 class="page-title">Has Covid taught humans a valuable climate lesson?</h1>
-                    <h2 class="page-description">subtitle</h2>
                 </div>
             </div>
             <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
