--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </a>
     <ul>
         <li class="nav-home  nav-current" role="presentation"><a href="/ada-2022-project-wetried/">Home</a></li>
-        <li class="nav-about " role="presentation"><a href="/ada-2022-project-wetried/appendix">Appendix</a></li>
+        <li class="nav-about " role="presentation"><a href="/ada-2022-project-wetried/appendix.html">Appendix</a></li>
     </ul>
     <a class="subscribe-button icon-feed" href="/ada-2022-project-wetried/a-full-and-comprehensive-style-test.html">Test</a>
 </div>
