--- a/appendix.html
+++ b/appendix.html
@@ -87,5 +87,26 @@
     <a class="subscribe-button icon-feed" href="/ada-2022-project-wetried/a-full-and-comprehensive-style-test.html">Test</a>
     </div>
     <span class="nav-cover"></span>
+
+    <div class="site-wrapper">
+
+        <header class="main-header "
+                style="background-image: url(/ada-2022-project-wetried/assets/images/cover1.png) ">
+            <nav class="main-nav overlay clearfix">
+                <a class="blog-logo" href="/ada-2022-project-wetried/"><img src="/ada-2022-project-wetried/assets/images/ghost.png" alt="Blog Logo" /></a>
+                
+                    <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
+                
+            </nav>
+            <div class="vertical">
+                <div class="main-header-content inner">
+                    <h1 class="page-title">Has Covid taught humans a valuable climate lesson?</h1>
+                </div>
+            </div>
+            <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
+        </header>
+
+    </div>
+
 </body>
 </html>
