--- a/index.html
+++ b/index.html
@@ -187,9 +187,10 @@
                     The R formula for these regressions is:
                 </p>
 
-                <p><img src="/ada-2022-project-wetried/assets/images/CodeCogsEqn.png" alt="Image (input)" style="display: block;
-                    margin-left: auto;
-                    margin-right: auto;"></p>
+                <p>
+                    <img src="/ada-2022-project-wetried/assets/images/CodeCogsEqn.png" alt="Image (input)" style="display: block;
+                        margin-left: auto;margin-right: auto;">
+                </p>
 
                 <p>
                     Three comparisons are made for each language:
@@ -290,6 +291,10 @@
                     of them positively or negatively in time, as to see if we can obtain one from the other that way. The closer the peak synchrony is to 0, the 
                     more synchronous the time series are; the contrary is also true, and this is what we tried to look for.
                 </p>
+
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_en.png" alt="Image (input)" style="display: block;
+                    margin-left: auto;
+                    margin-right: auto;"></p>
 
                 <p>
                     Here again, the results are unanimous for a lot of languages: apparently, people’s environment visits are often simply synchronized with 
