--- a/index.html
+++ b/index.html
@@ -292,9 +292,12 @@
                     more synchronous the time series are; the contrary is also true, and this is what we tried to look for.
                 </p>
 
-                <p><img src="/ada-2022-project-wetried/assets/images/pearson_en.png" alt="Image (input)" style="display: block;
-                    margin-left: auto;
-                    margin-right: auto;"></p>
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_en.png" alt="Image (input)" 
+                        style = "display: block;
+                                margin-left: auto;
+                                margin-right: auto;
+                                width: 80%;
+                                "></p>
 
                 <p>
                     Here again, the results are unanimous for a lot of languages: apparently, people’s environment visits are often simply synchronized with 
