--- a/index.html
+++ b/index.html
@@ -323,6 +323,10 @@
                     most important topics. A ranking of 1 means that it is the most viewed subject, while a ranking of 64 means the opposite.
                 </p>
 
+                <div>
+                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/28.embed?autosize=true&link=false"></iframe>
+                </div>
+
                 <p>
                     Here we can see that the ranking of the environment oscillates around 47 which is pretty low considering there are 64 topics, moreover 
                     from January 2020 to July 2020 it drops to 51 showing that people's attention shifted away from the environment during covid.
