--- a/index.html
+++ b/index.html
@@ -214,15 +214,15 @@
                 </p>
 
                 <div>
-                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/3.embed?autosize=true&link=false"></iframe>
+                    <iframe width="100%" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/3.embed?autosize=true&link=false"></iframe>
                 </div>    
                 
                 <div>
-                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/8.embed?autosize=true&link=false"></iframe>
+                    <iframe width="100%" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/8.embed?autosize=true&link=false"></iframe>
                 </div>
 
                 <div>
-                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/10.embed?autosize=true&link=false"></iframe>
+                    <iframe width="100%" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/10.embed?autosize=true&link=false"></iframe>
                 </div>
 
                 <p>
@@ -324,7 +324,7 @@
                 </p>
 
                 <div>
-                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/28.embed?autosize=true&link=false"></iframe>
+                    <iframe width="100%" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/28.embed?autosize=true&link=false"></iframe>
                 </div>
 
                 <p>
@@ -357,7 +357,7 @@
                 </p>
 
                 <div>
-                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/14.embed?autosize=true&link=false"></iframe>
+                    <iframe width="100%" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/14.embed?autosize=true&link=false"></iframe>
                 </div>
 
                 <p>
@@ -366,7 +366,7 @@
                 </p>
 
                 <div>
-                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/16.embed?autosize=true&link=false"></iframe>
+                    <iframe width="100%" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/16.embed?autosize=true&link=false"></iframe>
                 </div>
 
                 <p>
@@ -376,7 +376,7 @@
                 </p>
 
                 <div>
-                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/18.embed?autosize=true&link=false"></iframe>
+                    <iframe width="100%" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/18.embed?autosize=true&link=false"></iframe>
                 </div>
                 
                 <p>
@@ -386,7 +386,7 @@
                 </p>
 
                 <div>
-                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/20.embed?autosize=true&link=false"></iframe>
+                    <iframe width="100%" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/20.embed?autosize=true&link=false"></iframe>
                 </div>
 
                 <p>
@@ -446,7 +446,7 @@
                 </ul>
 
                 <div>
-                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/22.embed?autosize=true&link=false"></iframe>
+                    <iframe width="100%" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/22.embed?autosize=true&link=false"></iframe>
                 </div>
 
                 <p>
@@ -526,7 +526,7 @@
                 </p>
 
                 <div>
-                    <iframe width="600" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/24.embed?autosize=true&link=false"></iframe>
+                    <iframe width="100%" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/24.embed?autosize=true&link=false"></iframe>
                 </div>
 
                 <p>
