--- a/appendix.html
+++ b/appendix.html
@@ -31,13 +31,12 @@
     <!-- Ghost outputs important style and meta data with this tag -->
     <link rel="canonical" href="https://epfl-ada.github.io/ada-2022-project-wetried/" />
     <meta name="referrer" content="origin" />
-    <link rel="next" href="/ada-2022-project-wetried/page2/" />
 
     <meta property="og:site_name" content="Has Covid taught humans a valuable climate lesson?" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Has Covid taught humans a valuable climate lesson?" />
     <meta property="og:description" content="subtitle" />
-    <meta property="og:url" content="https://epfl-ada.github.io/ada-2022-project-wetried/" />
+    <meta property="og:url" content="https://epfl-ada.github.io/ada-2022-project-wetried/appendix.html" />
     <meta property="og:image" content="/ada-2022-project-wetried/assets/images/cover1.png" />
 
     <script type="application/ld+json">
@@ -81,8 +80,8 @@
         <span class="hidden">Close</span>
     </a>
     <ul>
-        <li class="nav-home  nav-current" role="presentation"><a href="/ada-2022-project-wetried/">Home</a></li>
-        <li class="nav-about " role="presentation"><a href="/ada-2022-project-wetried/appendix.html">Appendix</a></li>
+        <li class="nav-home" role="presentation"><a href="/ada-2022-project-wetried/">Home</a></li>
+        <li class="nav-about nav-current" role="presentation"><a href="/ada-2022-project-wetried/appendix.html">Appendix</a></li>
     </ul>
     <a class="subscribe-button icon-feed" href="/ada-2022-project-wetried/a-full-and-comprehensive-style-test.html">Test</a>
 </div>
@@ -114,6 +113,6 @@
             </article>
         </main>
     </div>
-    
+
 </body>
 </html>
