--- a/index.html
+++ b/index.html
@@ -340,6 +340,10 @@
 
                 <h1>The external datasets which we added by ourselves</h1>
 
+                <div>
+                    <iframe width="100%" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/30.embed?autosize=true&link=false"></iframe>
+                </div>
+
                 <p>
                     However, just like people say “actions speak louder than words”, we say “views speak better when combined with actions”. To analyze 
                     better, we needed data about the pollution itself, but also more up-to-date Wikipedia data (Coronawiki, again, stops at the end of 
