--- a/index.html
+++ b/index.html
@@ -340,12 +340,39 @@
 
                 <h1>The external datasets which we added by ourselves</h1>
 
+                <p>
+                    After the results obtained using CoronaWiki, we started to think that the analysis of the environment could be improved by using a larger 
+                    timeframe. Indeed, now, we are only focusing on three years 2019 to 2022. By increasing this interval, we could get a better sense of the 
+                    evolution of the environment topic views count.
+                </p>
+
+                <p>
+                    Thus, we decided to aggregate all the views of every Wikipedia pages in the topic environment starting from the earliest date possible 
+                    (01/07/2015) to the end of 2022 (20/11/2022). The following graph shows the distribution of the page count per day for each year.
+                </p>
+
                 <div>
                     <iframe width="100%" height="450" frameborder="0" scrolling="no" src="//plotly.com/~MrZaiko/30.embed?autosize=true&link=false"></iframe>
                 </div>
 
                 <p>
-                    However, just like people say “actions speak louder than words”, we say “views speak better when combined with actions”. To analyze 
+                    If CoronaWiki data showed a grim view, the global view is even more troubling. Not only the environment topic is not the user priority, 
+                    but it is clear that, after the Covid crisis, interest in it fell dramatically. In 2022, even the outliers are not bigger than the third 
+                    fence of 2021.
+                </p>
+
+                <p>
+                    However, just like people say “actions speak louder than words”, we say : 
+                </p>
+
+                <blockquote>
+                    <p>
+                        Views count speaks better when combined with actions
+                    </p>
+                </blockquote>
+
+                <p>
+                    To analyze 
                     better, we needed data about the pollution itself, but also more up-to-date Wikipedia data (Coronawiki, again, stops at the end of 
                     July 2020). This is the subject of the following part.
                 </p>
