--- a/appendix.html
+++ b/appendix.html
@@ -75,16 +75,16 @@
 
     <!-- The blog navigation links -->
     <div class="nav">
-    <h3 class="nav-title">Menu</h3>
-    <a href="#" class="nav-close">
-        <span class="hidden">Close</span>
-    </a>
-    <ul>
-        <li class="nav-home" role="presentation"><a href="/ada-2022-project-wetried/">Home</a></li>
-        <li class="nav-about nav-current" role="presentation"><a href="/ada-2022-project-wetried/appendix.html">Appendix</a></li>
-    </ul>
-    <a class="subscribe-button icon-feed" href="/ada-2022-project-wetried/a-full-and-comprehensive-style-test.html">Test</a>
-</div>
+        <h3 class="nav-title">Menu</h3>
+        <a href="#" class="nav-close">
+            <span class="hidden">Close</span>
+        </a>
+        <ul>
+            <li class="nav-home" role="presentation"><a href="/ada-2022-project-wetried/">Home</a></li>
+            <li class="nav-about nav-current" role="presentation"><a href="/ada-2022-project-wetried/appendix.html">Appendix</a></li>
+        </ul>
+        <a class="subscribe-button icon-feed" href="/ada-2022-project-wetried/a-full-and-comprehensive-style-test.html">Test</a>
+    </div>
 <span class="nav-cover"></span>
 
 
@@ -113,6 +113,19 @@
             </article>
         </main>
     </div>
+
+
+    <!-- highlight.js -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+
+    <!-- jQuery needs to come before `` so that jQuery can be used in code injection -->
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+
+    <!-- Fitvids makes video embeds responsive and awesome -->
+    <script type="text/javascript" src="/ada-2022-project-wetried/assets/js/jquery.fitvids.js"></script>
+    <!-- The main JavaScript file for Casper -->
+    <script type="text/javascript" src="/ada-2022-project-wetried/assets/js/index.js"></script>
 
 </body>
 </html>
