--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
                 <blockquote>
                     <p>
-                        Views count speaks better when combined with actions
+                        Views speak better when combined with actions
                     </p>
                 </blockquote>
 
