--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 </div>
 
                 <p>
-                    The changes are not unfortunately all statistically significant; the lines where one can see an ‘x’ instead of a circle are those for 
+                    The changes are not unfortunately all statistically significant; the languages with red confidence intervals are those for 
                     which we can’t derive conclusions. Let us go figure by figure now:
                 </p>
                
