Changed some text

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 </div>
 
                 <p>
-                    We can see here that for Italian, Norwegian, English and Dutch, the time series are really close to each others, and because the shortest path is 
+                    For Italian, Norwegian, English and Dutch, the time series are really close to each others, and because the shortest path is 
                     really close to the matrix diagonal, we can say that the time series are behaving similarly (up to the scales of the values and time dilation). 
                     This may indicate that the evolution in environment views and Wikipedia views may behave very similarly.
                 </p>
@@ -289,7 +289,7 @@
                 <p>
                     Time lagged cross correlation is meant to add to the above analysis; it studies the correlation between the two time series by shifting one 
                     of them positively or negatively in time, as to see if we can obtain one from the other that way. The closer the peak synchrony is to 0, the 
-                    more synchronous the time series are; the contrary is also true, and this is what we tried to look for.
+                    more synchronous the time series are; the contrary is also true, and this is what we tried to look for. Two examples of outputs are below:
                 </p>
 
                 <p><img src="/ada-2022-project-wetried/assets/images/pearson_en.png" alt="Image (input)" 
@@ -300,7 +300,7 @@
                                 "></p>
 
                 <p>
-                    Here again, the results are unanimous for a lot of languages: apparently, people’s environment visits are often simply synchronized with 
+                    Again, the results are unanimous for a lot of languages: apparently, people’s environment visits are often simply synchronized with 
                     their visits to other Wikipedia topics (example of the first figure).
                 </p>
 
@@ -342,13 +342,13 @@
 
                 <p>
                     After the results obtained using CoronaWiki, we started to think that the analysis of the environment could be improved by using a larger 
-                    timeframe. Indeed, now, we are only focusing on three years 2019 to 2022. By increasing this interval, we could get a better sense of the 
+                    timeframe. Indeed, until now, we were only focusing on three years 2018 to 2020. By increasing this interval, we could get a better sense of the 
                     evolution of the environment topic views count.
                 </p>
 
                 <p>
                     Thus, we decided to aggregate all the views of every Wikipedia pages in the topic environment starting from the earliest date possible 
-                    (01/07/2015) to the end of 2022 (20/11/2022). The following graph shows the distribution of the page count per day for each year.
+                    (01/07/2015) to the end of 2022 (20/11/2022). The following graph shows the distribution of the views for the topic for each year.
                 </p>
 
                 <div>
