--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                 </p>
 
                 <p>
-                    We use the granger test, which analyzes whether the past of a given time series is useful in linearly predicting another. 
+                    We use the Granger test, which analyzes whether the past of a given time series is useful in linearly predicting another. 
                     The point is then to check whether the past of the wikipedia views of a given country can predict the future of the air 
                     pollution in the capital of said country. 
                 </p>
@@ -524,7 +524,7 @@
                     by itself for the present and close future of air pollution.
                 </p>
 
-                <h1>What if ? and what happens next ?</h1>
+                <h1>What if ? And what happens next ?</h1>
 
                 <p>
                     In this final part, we want to create a hypothetical scenario of 2022 using statistical forecasting without the
