--- a/index.html
+++ b/index.html
@@ -306,6 +306,13 @@
                                 width: 100%;
                                 "></p>
 
+                <p><img src="/ada-2022-project-wetried/assets/images/pearson_de.png" alt="Image (input)" 
+                    style = "display: block;
+                            margin-left: auto;
+                            margin-right: auto;
+                            width: 100%;
+                            "></p>
+
                 <p>
                     Again, the results are unanimous for a lot of languages: apparently, people’s environment visits are often simply synchronized with 
                     their visits to other Wikipedia topics (example of the first figure).
