small patch bottom text

--- a/index.html
+++ b/index.html
@@ -390,6 +390,8 @@
                     better, we needed data about the pollution itself, but also more up-to-date Wikipedia data (Coronawiki, again, stops at the end of 
                     July 2020). This is the subject of the following part.
                 </p>
+                
+                <h2>The air pollution dataset (WAQI)</h2>
 
                 <p>
                     Let’s have a look at the other dataset which we imported : we study the air pollution from the World Air Quality Index (WAQI), 
@@ -436,7 +438,7 @@
 
                 <p>
                     This is perhaps the surprise of this part. We find that between 2019 and 2021, the only significant changes show that the cities are doing 
-                    better in 2021 in terms of air pollution, the only exception being Barcelona (Spain).
+                    better in 2021 in terms of air pollution, the only exceptions being Barcelona (Spain) and Helsinki (Finland).
                 </p>
 
                 <p>
@@ -451,7 +453,7 @@
                     This is what we will study next.
                 </p>
 
-                <h1>Bottom text</h1>
+                <h1>Wikipedia-based awareness versus empirical air quality</h1>
 
                 <p>
                     The goal is to establish whether there is a link between awareness (i.e. Wikipedia views) and actual ground measurements about pollution. 
